--- a/css/index.css
+++ b/css/index.css
@@ -194,6 +194,10 @@ a {
   font-weight: 700;
 }
 
+.title-1 {
+  color: #2c1c5f;
+}
+
 .title-2 {
   color: #dc6803;
 }
@@ -208,4 +212,12 @@ a {
 
 .title-5 {
   color: #475467;
+}
+
+.title {
+  display: flex;
+  justify-content: center;
+  justify-items: center;
+  flex-direction: column;
+  gap: 2rem;
 }
