--- a/scss/functions/_get-color.scss
+++ b/scss/functions/_get-color.scss
@@ -1,10 +1,26 @@
 @use '../variables' as *;
 @use 'sass:map';
 
+// @function get-color($type, $level) {
+// add the logic here
+// use if else to check if the type and level are valid
+// if they are valid, return the color
+// if they are not valid warn 'Invalid color type or level' and return null
+// null is a special value in Sass that means nothing, and it is used to represent the absence of a value, you need to return null if the type or level is not valid
+
 @function get-color($type, $level) {
-  // add the logic here
-  // use if else to check if the type and level are valid
-  // if they are valid, return the color
-  // if they are not valid warn 'Invalid color type or level' and return null
-  // null is a special value in Sass that means nothing, and it is used to represent the absence of a value, you need to return null if the type or level is not valid
+  // Cek apakah tipe yang diberikan ada di dalam map warna
+  @if not map-has-key($color-map, $type) {
+    @warn "Tipe warna '#{$type}' tidak ditemukan dalam color map.";
+    @return null;
+  }
+
+  // Cek apakah level yang diberikan ada di dalam tipe warna tersebut
+  @if not map-has-key(map-get($color-map, $type), $level) {
+    @warn "Level warna '#{$level}' tidak ditemukan untuk tipe '#{$type}'.";
+    @return null;
+  }
+
+  // Return warna yang sesuai jika valid
+  @return map-get(map-get($color-map, $type), $level);
 }
