editing function etc

--- a/css/index.css
+++ b/css/index.css
@@ -199,7 +199,7 @@ a {
 }
 
 .title-2 {
-  color: #dc6803;
+  color: #fffaeb;
 }
 
 .title-3 {
@@ -207,7 +207,7 @@ a {
 }
 
 .title-4 {
-  color: #067647;
+  color: #074d31;
 }
 
 .title-5 {
