--- a/scss/index.scss
+++ b/scss/index.scss
@@ -12,7 +12,7 @@
 }
 
 .title-2 {
-  color: get-color(warning, 600);
+  color: get-color(warning, 50);
 }
 
 .title-3 {
@@ -20,11 +20,11 @@
 }
 
 .title-4 {
-  color: get-color(sucessx, 700);
+  color: get-color(success, 900);
 }
 
 .title-5 {
-  color: get-color(xgray, 600);
+  color: get-color(gray, 600);
 }
 
 .title {
