--- a/scss/variables/_colors.scss
+++ b/scss/variables/_colors.scss
@@ -3,7 +3,7 @@ $black: #000;
 // add the $colors map here (2 dimensional map)
 
 $color-map: (
-  xgray: (
+  gray: (
     25: #fcfcfd,
     50: #f9fafb,
     100: #f2f4f7,
