--- a/scss/functions/_get-color.scss
+++ b/scss/functions/_get-color.scss
@@ -10,17 +10,17 @@
 
 @function get-color($type, $level) {
   // Cek apakah tipe yang diberikan ada di dalam map warna
-  @if not map-has-key($color-map, $type) {
+  @if not map.has-key($color-map, $type) {
     @warn "Tipe warna '#{$type}' tidak ditemukan dalam color map.";
     @return null;
   }
 
   // Cek apakah level yang diberikan ada di dalam tipe warna tersebut
-  @if not map-has-key(map-get($color-map, $type), $level) {
+  @if not map.has-key(map.get($color-map, $type), $level) {
     @warn "Level warna '#{$level}' tidak ditemukan untuk tipe '#{$type}'.";
     @return null;
   }
 
   // Return warna yang sesuai jika valid
-  @return map-get(map-get($color-map, $type), $level);
+  @return map.get(map.get($color-map, $type), $level);
 }
